fixed chat on mobile

--- a/Components/homepage/chat/static/css/chat.css
+++ b/Components/homepage/chat/static/css/chat.css
@@ -151,7 +151,7 @@
     }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-device-width:600px) {
     .full-chat-block {
         width: 100%;
         border-radius: 0px;
